<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:gravity="center"
  android:paddingLeft="@dimen/paddingLeftrightlayoutall"
    android:paddingEnd="@dimen/paddingLeftrightlayoutall"

    android:layout_height="match_parent"

    tools:context=".SignUp">


    <TextView
        android:id="@+id/SignupAccount"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/SignupAccounttextsize"
        android:textColor="@color/white"
        android:text="@string/SignupAccount" />

    <TextView
        android:id="@+id/textView4"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/textView4size"
        android:textColor="@color/textColorHint"
        android:text="@string/textView4" />

    <LinearLayout
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/Firstname"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:hint="@string/Firstname"
            android:textColor="@color/white"
            android:textColorHint="@color/textColorHint"
            android:layout_marginEnd="@dimen/layout_marginEndfirstlast"

            />

        <EditText
            android:id="@+id/Lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Lastname"
            android:textColor="@color/white"
            android:textColorHint="@color/textColorHint"
            android:layout_marginStart="@dimen/layout_marginEndfirstlast"
             />
    </LinearLayout>

    <EditText
        android:id="@+id/Email"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:textColor="@color/white"
        android:textColorHint="@color/textColorHint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Password"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:textColor="@color/white"
        android:textColorHint="@color/textColorHint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/RePassword"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:hint="@string/RePassword"
        android:textColorHint="@color/textColorHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonCreateAccount"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColorblue"

        android:text="@string/buttonCreateAccount"
        android:textColorLink="@color/textColorblue"
        android:textSize="@dimen/buttonCreateAccounttextsize" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
android:textColor="@color/textColorHint"
            android:text="@string/textView6" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView7"
            android:textColor="@color/textColorblue"/>
    </LinearLayout>




</LinearLayout>